--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>D3 Bubble Chart</title>
   <link rel="stylesheet" href="css/base.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 </head>
 <body>
-  <h1>Skill Set of Hideto</h1>
+  <h1>What Hideto Can Do</h1>
   <div id="chart"></div>
+  <p id="js-text" class="text"></p>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.2/d3.min.js"></script>
   <script src="bubbles.js"></script>
