Add Separate and Combine Function

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,11 @@
 <body>
   <h1>What Hideto Can Do</h1>
   <div id="chart"></div>
-  <p id="js-text" class="text"></p>
+  <div class="btnAndText">
+    <button id="js-separate" class="separate">Separate</button>
+    <p id="js-text" class="text"></p>
+    <button id="js-combine" class="combine">Combine</button>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.2/d3.min.js"></script>
   <script src="bubbles.js"></script>
